# telegram-utility-bot

./: .gitignore  .pre-commit-config.yaml  .python-version  .serverless.yml.swp  Pipfile  Pipfile.lock.old  README.md  deleteme.py  env.yml  google.py  handler.py  log.py  package-lock.json  package.json  pyproject.toml  pytest.ini  requirements.txt  serverless.yml  setup  setup.sh  spotify.py  telegram.py  util.py
.circleci/: config.yml
openai/: chatbot.py
scripts/: gen_apple_jwt.py  genapplejwt.sh
streaming/: __init__.py  google.py  google_.py  match.py  service_gmusic.py  service_youtube.py  service_ytmusic.py  spotify.py  streaming.py
streaming/service/: applemusic.py  gmusic.py  spotify.py  youtube.py  ytmusic.py
streaming/tests/: test_google.py  test_google_.py  test_service_gmusic.py  test_service_spotify.py  test_service_youtube.py  test_service_ytmusic.py  test_spotify.py
streaming/tests/integ/: test_integ_match.py
streaming/tests/integ/service/: test_integ_applemusic.py  test_integ_gmusic.py  test_integ_spotify.py  test_integ_youtube.py  test_integ_ytmusic.py
streaming/tests/service/: test_gmusic.py  test_spotify.py  test_youtube.py  test_ytmusic.py
streaming/tests/unit/: test_streaming.py
tests/integ/: __init__.py  test_integ_handler.py  test_integ_telegram.py  test_integ_youtube_matching.py
tests/integration/: test_integ_handler.py  youtube_matching.py
tests/unit/: test_telegram.py
utils/: env.py  log.py  telegram.py
utils/tests/integ/: test_integ_telegram.py
utils/tests/unit/: test_env.py  test_telegram.py
(+5 files in other folders)
