[tool.poetry]
name = "telegram-utility-bot"
version = "0.1.0"
description = ""
authors = ["JGMEYER <meyer.justian@gmail.com>"]
readme = "README.md"
packages = [{include = "telegram_utility_bot"}]

[tool.poetry.dependencies]
python = "^3.9"
google-api-python-client = "*"
google-auth = "*"
google-auth-httplib2 = "*"
google-auth-oauthlib = "*"
pre-commit = "*"
pytest-xdist = "*"
requests = "*"
rsa = "*"
urllib3 = "*"
wheel = "*"
ytmusicapi = "*"
openai = "^1.3.8"

[tool.poetry.dev-dependencies]
black = "==22.10.0"
flake8 = "*"
pre-commit = "*"
pytest = "*"
PyYAML = ">=5.4"
pyjwt = "*"
cryptography = "*"  # Required for ES256 algorithm for jwt

[tool.poetry.group.dev.dependencies]
tiktoken = "^0.5.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
